argocd/infra/external/synology/synology-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synology-internal-route
  namespace: external
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-internal
    namespace: default
    sectionName: https
  hostnames: ["synology.internal.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service
        name: synology-dsm
        port: 443
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
